# apigen

./: Cargo.toml  README.md
src/: api_schema.rs  builder.rs  main.rs  schema.rs  template.rs
src/output/src/: main.rs
src/output/src/api/: mod.rs  order.rs  product.rs  user.rs
src/templates/: cargo.toml.template  main.rs.tera
src/templates/api/: entity.rs.tera  mod.rs.tera
src/templates/postgres/: .env.template  Dockerfile.template  cargo.toml.template  docker-compose.yml.template  main.rs.tera  schema.rs.tera
src/templates/postgres/api/: entity.rs.tera  mod.rs.tera
