[package]
name = "api_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
short-uuid = "0.1.2"
tera = "1.20.0"
thiserror = "1.0.61"
tokio =  { version = "1.38.0", features = ["full"] }
