[package]
name = "apigen"
version = "0.1.0"
authors = ["Fedor Tkachenko <vzdbovich@gmail.com>"]
license = "MIT"
description = "A tool to genearate REST API written in Rust"
keywords = ["cli", "template", "rest", "api", "generator"]
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2021"
homepage = "https://github.com/Pulko/rapido_tool"
repository = "https://github.com/Pulko/rapido_tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
short-uuid = "0.1.2"
tera = "1.20.0"
thiserror = "1.0.61"
tokio =  { version = "1.38.0", features = ["full"] }

[[bin]]
name = "apigen"
path = "src/main.rs"
