[package]
name = "apigen"
version = "0.2.0"
authors = ["Fedor Tkachenko <vzdbovich@gmail.com>"]
license = "MIT"
description = "A tool to genearate REST API written in Rust"
keywords = ["cli", "template", "rest", "api", "generator"]
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2021"
homepage = "https://github.com/Pulko/apigen"
repository = "https://github.com/Pulko/apigen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15.0"
include_dir = "0.7.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
short-uuid = "0.1.2"
tera = "1.20.0"
thiserror = "1.0.61"
tokio =  { version = "1.38.0", features = ["full"] }

[[bin]]
name = "apigen"
path = "src/main.rs"

[dev-dependencies]
tokio =  { version = "1.38.0", features = ["full"] }
